--- a/Lesson11/Home(Grid)/style.css
+++ b/Lesson11/Home(Grid)/style.css
@@ -4,3 +4,51 @@
   box-sizing: border-box;
 }
 
+body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #f8f9fa;
+}
+
+.gallery {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  margin: 50px;
+  gap: 10px;
+  width: 90%;
+}
+
+.image1 img{
+  width: 100%;
+  height: 100%;
+  border: 1px solid;
+}
+
+.image2 img{
+  width: 40%;
+  height: 40%;
+  border: 1px solid;
+  transform: translate(10%, -67%);
+  margin: 80px;
+}
+
+.image3 img{
+  display: grid;
+  width: 100px;
+  height: 130px;
+  border: 1px solid;
+  transform: translate(-380%, 50%);
+  margin: 80px;
+  margin-bottom: 80px;
+}
+
+.image4 img{
+  display: grid;
+  width: 200px;
+  height: 200px;
+  border: 1px solid;
+  transform: translate(-300%, -40%);
+  margin: 50px;
+  /* margin-bottom: 20px; */
+}
